--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "devDependencies": {
     "tslint": "^5.9.1",
     "typescript": "^2.2.2"
+  },
+  "dependencies": {
+    "ts-vector": "^0.1.0"
   }
 }
